--- a/My/package.json
+++ b/My/package.json
@@ -12,16 +12,18 @@
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.5",
-    "expo": "~53.0.20",
-    "expo-status-bar": "~2.2.3",
+    "expo": "^54.0.0",
+    "expo-status-bar": "~3.0.8",
     "firebase": "^12.1.0",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.11.1"
+    "nativewind": "^4.2.1",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.26.0"
   },
   "private": true
 }
