--- a/My/package.json
+++ b/My/package.json
@@ -12,12 +12,13 @@
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.5",
-    "expo": "^54.0.0",
+    "expo": "^54.0.10",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.1.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "tailwindcss": "^3.4.17"
