--- a/My/package.json
+++ b/My/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.5",
     "expo": "^54.0.10",
     "expo-status-bar": "~3.0.8",
-    "firebase": "^12.1.0",
+    "firebase": "^12.3.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
