--- a/My/app.json
+++ b/My/app.json
@@ -1,12 +1,13 @@
 {
   "expo": {
-    "name": "My",
-    "slug": "My",
+    "name": "Campus Shuttle Tracker",
+    "slug": "campus-shuttle-tracker",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "description": "Real-time campus shuttle tracking and driver management system",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -20,10 +21,30 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
+      "package": "com.aditya5t.campusshuttletracker"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro",
+      "output": "single"
+    },
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "This app needs access to location when open and in the background."
+        }
+      ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "c0c9065e-1aa0-42f8-a146-7ceca01939f4"
+      }
     }
   }
 }
