--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Campus Shuttle Tracker",
-    "slug": "campus-shuttle-tracker",
+    "name": "RevRacker",
+    "slug": "revracker",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -24,9 +24,11 @@
       "edgeToEdgeEnabled": true,
       "permissions": [
         "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_FINE_LOCATION"
       ],
-      "package": "com.aditya5t.campusshuttletracker"
+      "package": "com.aditya5t.revracker"
     },
     "web": {
       "favicon": "./assets/favicon.png",
@@ -39,12 +41,25 @@
         {
           "locationAlwaysAndWhenInUsePermission": "This app needs access to location when open and in the background."
         }
+      ],
+      [
+        "react-native-maps",
+        {
+          "googleMapsApiKey": ""
+        }
       ]
     ],
+    "owner": "aditya5t",
     "extra": {
       "eas": {
-        "projectId": "c0c9065e-1aa0-42f8-a146-7ceca01939f4"
+        "projectId": "4fb4e456-0843-489f-bfb3-cf0a7fd9204e"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/4fb4e456-0843-489f-bfb3-cf0a7fd9204e"
     }
   }
 }
