--- a/My/My/app.json
+++ b/My/My/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "RevRacker",
-    "slug": "revracker",
+    "name": "Campus Shuttle Tracker",
+    "slug": "campus-shuttle-tracker",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -24,11 +24,9 @@
       "edgeToEdgeEnabled": true,
       "permissions": [
         "android.permission.ACCESS_COARSE_LOCATION",
-        "android.permission.ACCESS_FINE_LOCATION",
-        "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_FINE_LOCATION"
       ],
-      "package": "com.aditya5t.revracker"
+      "package": "com.aditya5t.campusshuttletracker"
     },
     "web": {
       "favicon": "./assets/favicon.png",
@@ -43,17 +41,10 @@
         }
       ]
     ],
-    "owner": "aditya5t",
     "extra": {
       "eas": {
-        "projectId": "4fb4e456-0843-489f-bfb3-cf0a7fd9204e"
+        "projectId": "c0c9065e-1aa0-42f8-a146-7ceca01939f4"
       }
-    },
-    "runtimeVersion": {
-      "policy": "appVersion"
-    },
-    "updates": {
-      "url": "https://u.expo.dev/4fb4e456-0843-489f-bfb3-cf0a7fd9204e"
     }
   }
 }
