--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.5",
-    "expo": "^54.0.21",
+    "expo": "^54.0.25",
     "expo-document-picker": "~14.0.7",
-    "expo-file-system": "^19.0.17",
+    "expo-file-system": "^19.0.19",
     "expo-linear-gradient": "~15.0.7",
     "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.8",
-    "expo-updates": "~29.0.12",
+    "expo-updates": "^29.0.13",
     "firebase": "^12.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
